# Python-Web

./: README.md
hm2/: Dockerfile  README.md  pyproject.toml
hm3/: hm3_1.py  hm3_2.py
hm4/front-init/: main.py
hm4/front-init/storage/: data.json
hm5/: exceptions.py  main.py
hm5/services/: api_client.py  exchange_service.py
hm5/utils/: date_utils.py
hm6/: db.sql  generation.py  main.py  query1.sql  query10.sql  query2.sql  query3.sql  query4.sql  query5.sql  query6.sql  query7.sql  query8.sql  query9.sql  university.db
hm7/: alembic.ini  models.py  my_select.py  run_selects.py  seed.py
hm7/alembic/versions/: 0619d572a1e9_initial_tables.py
hm8/: load_data.py  search_quotes.py
hm9/: authors.json  load_data.py  main.py  models.py  qoutes.json  scrapy.cfg
hm9/hm9/: items.py  pipelines.py  settings.py
hm9/hm9/spiders/: author_spider.py  quotes_spider.py
hm_1/: hw1.py
